--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "spryker/container",
+  "type": "library",
   "description": "Container module",
   "license": "proprietary",
   "require": {
@@ -15,6 +16,11 @@
     },
     "psr-0": {
       "Pimple": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "SprykerTest\\": "tests/SprykerTest/"
     }
   },
   "minimum-stability": "dev",
