TE-648: Making travis grean. * Introduced Yves DependencyInjectorCollection. * Fixed PHP stan error for shared() and extend() methods. * Moved Pimple to Spryker dir. * Fixed PHP stan error for Testify module.

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
       "Spryker\\": "src/Spryker/"
     },
     "psr-0": {
-      "Pimple": "src/"
+      "Pimple": "src/Spryker"
     }
   },
   "autoload-dev": {
