Exchanged pimple/pimple with spryker/container in spryker/pimple, updated conflicts section to allow install patch for spryker/pimple

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "sort-packages": true
   },
   "conflict": {
-    "spryker/pimple": "*",
+    "spryker/pimple": "<2.0.1",
     "pimple/pimple": "*",
     "silex/silex": "*"
   }
