--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
+    "spryker/kernel": "*",
     "spryker/testify": "*"
   },
   "autoload": {
@@ -22,7 +23,8 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "SprykerTest\\": "tests/SprykerTest/"
+      "SprykerTest\\": "tests/SprykerTest/",
+      "SprykerTest\\Service\\Container\\Helper\\": "tests/SprykerTest/Service/Container/_support/Helper/"
     }
   },
   "minimum-stability": "dev",
