TE-1224 Updated test to be compatible with Silex\WebTestCase. TE-1224 Added missing autoload-dev entry.

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "SprykerTest\\": "tests/SprykerTest/"
+      "SprykerTest\\": "tests/SprykerTest/",
+      "SprykerTest\\Service\\Container\\Helper\\": "tests/SprykerTest/Service/Container/_support/Helper/"
     }
   },
   "minimum-stability": "dev",
