--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,10 @@
         }
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "conflict": {
         "spryker/pimple": "*",
