--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require-dev": {
         "spryker/code-sniffer": "*",
         "spryker/kernel": "*",
-        "spryker/testify": "*"
+        "spryker/testify": "^3.47.0"
     },
     "autoload": {
         "psr-4": {
