--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,16 @@
     "description": "Container module",
     "license": "proprietary",
     "require": {
+        "friendsofphp/proxy-manager-lts": "v1.0.18",
         "php": ">=8.3",
         "psr/container": "^1.0.0",
-        "spryker/symfony": "^3.0.0"
+        "spryker/kernel": "^3.48.0",
+        "spryker/module-finder": "^1.4.0",
+        "spryker/symfony": "^3.0.0",
+        "spryker/transfer": "^3.42.0"
     },
     "require-dev": {
         "spryker/code-sniffer": "*",
-        "spryker/kernel": "*",
         "spryker/testify": "^3.47.0"
     },
     "autoload": {
